# logi_fn_lock

./: 70-logi_fn_lock.rules  Cargo.toml  default.nix  flake.nix  readme.md
fn_activator/: Cargo.toml
fn_activator/src/: args.rs  main.rs
logi_fn_lock/: Cargo.toml
logi_fn_lock/src/: main.rs
