[package]
name = "fn_activator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hidapi = { version = "2.6", features = ["windows-native"] }
regex_static = "0.1"
